--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="drive mad"></a>
         <a href="games/slope/"><img src="images/slope.jpg" alt="slope"></a>
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
-        <a href="games/a-dance-of-fire-and-ice/"><img src="images/motox3m2.jpg" alt="ADOFAI"></a>
+        <a href="games/a-dance-of-fire-and-ice/"><img src="images/ADOFAI.png" alt="ADOFAI"></a>
     </div>
     </div>
 </body>
@@ -90,5 +90,6 @@
 
 
 <script src="script.js"></script>
+
 
 
