--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <a href="games/slope/"><img src="images/slope.jpg" alt="slope"></a>
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
         <a href="games/a-dance-of-fire-and-ice/"><img src="images/ADOFAI.png" alt="ADOFAI"></a>
+        <a href="games/Friday Night Funkin' vs ex/"><img src="images/ADOFAI.png" alt="FNFVSEX"></a>
     </div>
     </div>
 </body>
@@ -90,6 +91,7 @@
 
 
 <script src="script.js"></script>
+
 
 
 
