--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
         <a href="games/a-dance-of-fire-and-ice/"><img src="images/ADOFAI.png" alt="ADOFAI"></a>
         <a href="games/Friday Night Funkin' vs ex/"><img src="images/fnfvsex.png" alt="FNFVSEX"></a>
-        <a href="games/3kho radon-games-assets main src-friday-night-funkin--week-6/"><img src="images/fnfvsex.png" alt="FNFWEEK6"></a>
+        <a href="games/3kho radon-games-assets main src-friday-night-funkin--week-6/"><img src="images/FNFLOGO.png" alt="FNFWEEK6"></a>
     </div>
     </div>
 </body>
@@ -92,6 +92,7 @@
 
 
 <script src="script.js"></script>
+
 
 
 
