--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
     </div>
 
     <div id="games">
-        <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
+        <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber "></a>
+        <a href="games/1v1lol/"><img src="images/vex3.png" alt="1v1 lol"></a>
         <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a>
         <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
         <a href="games/"><img src="images/mc.png" alt="minecraft"></a>
@@ -92,6 +93,7 @@
 
 
 <script src="script.js"></script>
+
 
 
 
