--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <a href="games/1v1lol/"><img src="images/vex3.png" alt="1v1 lol"></a>
         <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a>
         <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
-        <a href="games/"><img src="images/mc.png" alt="minecraft"></a>
+        <a href="games/Minecraft/"><img src="images/mc.png" alt="minecraft"></a>
         <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="moto x3m"></a>
         <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
         <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="drive mad"></a>
@@ -93,6 +93,7 @@
 
 
 <script src="script.js"></script>
+
 
 
 
